# ai-browser-test

./: .gitignore  .hookwise.config.mjs  .npmignore  .npmrc  .secretsignore  API_IMPROVEMENTS.md  API_REVIEW.md  CHANGELOG.md  COMPLETION_STATUS.md  CONTRIBUTING.md  CREATE_ORG_INSTRUCTIONS.md  DEEP_SECURITY_ANALYSIS.md  E2E_VERIFICATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETE.md  NAME_OPTIONS.md  NAME_RECOMMENDATION.md  NPM_PUBLISH_REVIEW.md  PUBLISHED.md  PUBLISH_CHECKLIST.md  PUBLISH_INSTRUCTIONS.md  PUBLISH_PASSKEY_GUIDE.md  PUBLISH_REVIEW.md  README.md  SCOPE_EXPLANATION.md  SECURITY.md  STATUS.md  TEST_SUMMARY.md  example.test.mjs  hookwise.config.mjs  index.d.ts  package-lock.json  package.json  testcases.json  typedoc.json  vercel.json
.husky/: commit-msg  pre-commit
api/: health.js  validate.js
docs/: API_SUBMODULES.md  API_SURFACE_ORGANIZATION.md  BUG_FIXES_AND_EDGE_CASES.md  COMPARISON_AND_RESEARCH.md  COMPLETION_STATUS.md  CRITICAL_IMPLEMENTATION_ANALYSIS.md  CRITIQUE_AND_FIXES_SUMMARY.md  DATASET_DOWNLOAD_STATUS.md  DATASET_USAGE.md  DEEP_REFERENCE_IMPL_TEST_ANALYSIS.md  DEEP_SCRUTINY_FINDINGS.md  FIXES_IMPLEMENTATION_SUMMARY.md  GROUND_TRUTH_USAGE.md  HARMONIZATION_REVIEW.md  HARMONIZATION_STATUS.md  ITERATIVE_IMPROVEMENTS.md  NPM_PACKAGE_REVIEW_2025.md  NPM_TRUSTED_PUBLISHER_UPDATE.md  PROMPT_ANALYSIS.md  REFERENCE_IMPL_TEST_INTEGRATION_ANALYSIS.md  (+4 more)
docs-site/: api-reference.html  index.html
examples/marimo/: README.md  basic_validation.py  config.py  models.py  multi_modal_validation.py  persona_testing.py  pyproject.toml
(+236 files in other folders)
